Finished the summary component design, except responsiveness  - Added actual static content to the 4 cards  - Fixed the weird wrapping of card subtitle

--- a/app/static/stylesheets/style.css
+++ b/app/static/stylesheets/style.css
@@ -27,7 +27,7 @@
     --fs-header-subtitle: 1.25rem; /* 18px */
     --fs-control-label: 1.15rem; /* 16px */
     --fs-insights-header: 1.5rem; /* 20px */
-    --fs-insights-value: 2.15rem; /* 30px */
+    --fs-insights-value: 2rem; /* 30px */
     --fs-insights-evaluation: 1.15rem; /* 16px */;
     --fs-insights-subtitle: 1.15rem; /* 14px */;
 
@@ -46,7 +46,7 @@ html {
 }
 
 body {
-    max-width: 1020px;
+    max-width: 1100px;
     margin: 0 auto;
     padding: 40px 0;
     background-color: var(--clr-bg);
@@ -247,15 +247,15 @@ body {
 .summary-card__icon {
     width: 16px;
     height: 16px;
+    flex-shrink: 0;
 }
 
 .summary__cards-container {
     display: grid;
-    grid-template-columns: repeat(4, minmax(215px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto;
     gap: 15px;
     margin-bottom: 20px;
-    justify-items: center;
 }
 
 .summary-card {
@@ -272,6 +272,14 @@ body {
     gap: 5px;
     color: var(--clr-text-summary);
     /* margin-bottom: 5px; */
+}
+
+.summary-card__value-group {
+    display: flex;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    align-items: baseline;
+    gap: 5px;
 }
 
 .summary-card__value {
@@ -301,8 +309,6 @@ body {
     width: 20px;
     height: 20px;
 }
-
-
 
 @media screen and (max-width: 770px){
     .goal-selection {
